styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: linear-gradient(to top, #3d1f23, #0b0606);
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  height: 100vh;
  padding: 0 20px;
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
}

.logo {
  height: 100px;
  width: auto;
  object-fit: contain;
}

.sign-in-btn {
  background-color: white;
  color: black;
  padding: 0.6rem 1.4rem;
  border: none;
  border-radius: 999px;
  font-weight: bold;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.sign-in-btn:hover {
  background-color: #f1f1f1;
}

.nav-menu {
  position: fixed;
  top: 100px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9;
  display: flex;
  margin: -20px auto 40px auto;
  gap: 2rem;
  background-color: rgba(0, 0, 0, 0.6);
  width: 470px;
  padding: 0.8rem 2rem;
  border-radius: 2rem;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
}

.nav-menu a {
  color: #c4c1c1;
  text-decoration: none;
  font-weight: bold;
  transition: color 0.3s ease;
}

.nav-menu a:hover {
  color: #ffffff;
}

.hero-content {
  position: relative;
  z-index: 2;
  text-align: center;
  max-width: 800px;
  margin: auto;
  padding-bottom: 80px;
  color: white;
  padding-top: 180px;
}

.hero-content h1 {
  font-size: 3.5rem;
  font-weight: 700;
  line-height: 1.2;
  margin: 30px;
}

.subheading {
  font-size: 1.2rem;
  margin-bottom: 50px;
}

.subtext {
  font-size: 0.95rem;
  margin-bottom: 1.5rem;
}

.email-form {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 10px;
}

.email-form input {
  color: white;
  padding: 1rem 2rem;
  font-size: 1rem;
  width: 320px;
  border-radius: 30px;
  border: none;
  outline: none;
  background-color: #454242;
}

.email-form button {
  background: #e50914;
  color: #fff;
  width: 200px;
  font-size: 1.5rem;
  font-weight: 400;
  padding: 0.8rem 1.5rem;
  border: none;
  border-radius: 30px;
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 0.4rem;
  transition: background 0.3s;
}

.email-form button:hover {
  background: #f6121d;
}

